# Deskhub

./: .clang-format  .gitattributes  .gitignore  .swiftformat  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: lint.yml
client/windows/: AgentLoop.cpp  AgentLoop.h  CMakeLists.txt  ClientLoop.cpp  ClientLoop.h  DiagLog.cpp  DiagLog.h  ElevatedShare.cpp  ElevatedShare.h  IVideoEncoder.h  MfEncoder.cpp  MfEncoder.h  NetTest.cpp  NvencEncoder.cpp  NvencEncoder.h  main.cpp
client/windows/capture/: BmpWriter.cpp  BmpWriter.h  CaptureTypes.h  GpuSelect.cpp  GpuSelect.h  WindowCapture.cpp  WindowCapture.h  WindowFinder.cpp  WindowFinder.h
client/windows/decode/: IVideoDecoder.h  MfDecoder.cpp  MfDecoder.h  Renderer.cpp  Renderer.h
client/windows/encode/: EncoderFactory.cpp  IVideoEncoder.h  MfEncoder.cpp  MfEncoder.h  NvencEncoder.cpp  NvencEncoder.h
client/windows/input/: InputCapture.cpp  InputCapture.h  InputInjector.cpp  InputInjector.h
client/windows/net/: Firewall.cpp  NetInfo.cpp  NetInfo.h  Pacer.cpp  Pacer.h  UdpSocket.cpp  UdpSocket.h
core/: CMakeLists.txt
core/src/: ClientSession.cpp  HostSession.cpp  Packetizer.cpp  Reassembler.cpp  Wire.cpp
core/tests/: CoreTests.cpp
docs/: 01-architecture.md  02-agent.md  03-client.md  04-protocol.md  05-roadmap.md  06-phase3-transport.md  07-phase4-input.md  08-android-client.md  09-diagnostics.md  10-web-client.md  11-platform-transport.md  README.md
platform/: CMakeLists.txt
platform/include/rgcp/: Clock.h
scripts/: bootstrap.ps1  bootstrap.sh  codestyle.ps1  codestyle.sh
(+65 files in other folders)
